--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@ The Tourism and Trade Expo will run through May 1 as part of the province's mont
 <br>
 <br>
 
-<div class="mapouter"><div class="gmap_canvas"><iframe width="918" height="648" id="gmap_canvas" src="https://maps.google.com/maps?q=lingayen%20beachfront&t=k&z=17&ie=UTF8&iwloc=&output=embed" frameborder="0" scrolling="no" marginheight="0" marginwidth="0"></iframe><a href="https://www.embedgooglemap.net/blog/divi-discount-code-elegant-themes-coupon/">divi discount</a><br><style>.mapouter{position:relative;text-align:right;height:648px;width:918px;}</style><a href="https://www.embedgooglemap.net">embed google map location</a><style>.gmap_canvas {overflow:hidden;background:none!important;height:648px;width:918px;}</style></div></div>
+<div class="mapouter"><div class="gmap_canvas"><iframe width="938" height="580" id="gmap_canvas" src="https://maps.google.com/maps?q=consuelo%20hotel%20to%20lingayen%20beach&t=k&z=17&ie=UTF8&iwloc=&output=embed" frameborder="0" scrolling="no" marginheight="0" marginwidth="0"></iframe><a href="https://www.whatismyip-address.com/divi-discount/">divi discount</a><br><style>.mapouter{position:relative;text-align:right;height:580px;width:938px;}</style><a href="https://www.embedgooglemap.net">embedgooglemap.net</a><style>.gmap_canvas {overflow:hidden;background:none!important;height:580px;width:938px;}</style></div></div>
 <br>
 <br>
 <br>    
