--- a/index.html
+++ b/index.html
@@ -2,6 +2,9 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta name="description" content="Lingayen Expo">
+    <meta name="keywords" content="WebAlly,Lingayen Expo">
+    <meta name="author" content="WebAlly">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Web ally</title>
     <link rel="shortcut icon" href="image/logo.png" type="image/x-icon">
