--- a/index.html
+++ b/index.html
@@ -1,11 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="description" content="Lingayen Expo">
-    <meta name="keywords" content="WebAlly,Lingayen Expo">
-    <meta name="author" content="WebAlly">
-    <meta name="viewport" content="width=device-width, initial-scale=1"/>
+   <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width,initial-scale=1"/>
     <title>Web ally</title>
     <link rel="shortcut icon" href="image/logo.png" type="image/x-icon">
     <link rel="stylesheet" href="css/style.css">
